test/compilable/imports/test7491b.d
module imports.test7491b;

void writeln();
