test/fail_compilation/test314b.d
module test314b;

import imports.test314b;

void foo()
{
    imp.foo();
}
